--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="form-group">
                 <button type="button" class="btn btn-primary round" onclick="accessInfo()">Sign Up</button>
                 <label> </label> 
-                <button type="button" class="btn btn-default round" onclick="redirect()">Cancel</button>
+                <button type="button" class="btn btn-default round">Cancel</button>
             </div>
         </form>
 
