--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             });
         }
         function create(userData,email){
-            ref.child("users").child(userId).set({
+            ref.child("users").child(userDatas).set({
                 basic:{
                     email: email
                 }
