--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     email: email
                 }
             })
+            window.location.href = "carousel.html";
         }
             //var usersRef = ref.child("users")
             //var usernameRef = usersRef.child(userData);
