--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="bootstrap-3.3.5-dist/js/bootstrap.js"></script>
+      
     <title>Carousel Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
