--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/nature-sky-sunset-man.jpeg" alt="First slide">
+          <img class="first-slide" src="img/snow-mountains-sunset-trees.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
