--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pexels-photo.jpeg" alt="Second slide">
+          <img class="second-slide" src="img/trees.jpeg"alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
