--- a/sign-up.html
+++ b/sign-up.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-
+    <script src='http://cdn.ractivejs.org/latest/ractive.js'></script>
     <title>Hike | New User</title>
 
     <!-- Bootstrap Core CSS -->
