--- a/sign-up.html
+++ b/sign-up.html
@@ -70,11 +70,15 @@
                 </select>
             </div>-->
             
-            <div class="form-group">
+            <!--<div class="form-group">
+                <label> </label>
                 <button type="button" class="btn btn-primary round" onclick="accessInfo()">Sign Up</button>
-                <button type="button" class="btn btn-default round" onclick="clear()">Cancel</button>
-                <label> </label> 
-                
+                <label> </label>
+                <button class="btn btn-default round" onclick="goHome()">Cancel</button>
+            </div>-->
+            <div class="form-group">
+                    <button type="button" class="btn btn-primary round" onclick="accessInfo()">Submit</button>
+                    <label> </label> <a class="btn btn-default round" href="index.html">Cancel</a>
             </div>
         </form>
 
@@ -102,6 +106,7 @@
             //accessInfo(params["username"]);
         };
         function accessInfo() {
+            console.log("access clicked!!");
             var username = $("#username").val();
             var password = $("#password").val();
             console.log(username);
