--- a/sign-in.html
+++ b/sign-in.html
@@ -20,7 +20,7 @@
     <link href="sign-up.css" rel="stylesheet">
     <style>
         body {
-            background-image: url(img/nature-sky-sunset-sun.jpg);
+            background-image: url(img/nature-tree-green-pine.jpg);
             margin-left: 8vw;
             margin-right: 8vw;
             width: auto;
@@ -48,7 +48,7 @@
 <body onload="parseQueryString()">
 
     <div id="bg" class="container">
-        <h2>Hello, new user</h2>
+        <h2>Hello, Darkness my old friend</h2>
         <form role="form" onsubmit="accessInfo()" class="form-signin">
             <div class="form-group">
                 <label for="username">Username:</label>
@@ -77,7 +77,7 @@
                 <button class="btn btn-default round" onclick="goHome()">Cancel</button>
             </div>-->
             <div class="form-group">
-                    <button type="button" class="btn btn-primary round" onclick="accessInfo()">Sign up</button>
+                    <button type="button" class="btn btn-primary round" onclick="accessInfo()">Sign in</button>
                     <label> </label> <a class="btn btn-default round" href="index.html">Cancel</a>
             </div>
         </form>
