--- a/sign-in.html
+++ b/sign-in.html
@@ -48,7 +48,7 @@
 <body onload="parseQueryString()">
 
     <div id="bg" class="container">
-        <h2>Hello, Darkness my old friend</h2>
+        <h2>Hello again</h2>
         <form role="form" onsubmit="accessInfo()" class="form-signin">
             <div class="form-group">
                 <label for="username">Username:</label>
