--- a/sign-up.html
+++ b/sign-up.html
@@ -114,24 +114,21 @@
             setUp(username,password);
         }
         function setUp(username,password){
-            //var ref = new Firebase("https://testapp31415.firebaseio.com");
-            ref.createUser({
+            /*var ref = new Firebase("https://<YOUR-FIREBASE-APP>.firebaseio.com");*/
+            ref.authWithPassword({
               email    : username,
               password : password
-            }, function(error, userData) {
+            }, function(error, authData) {
               if (error) {
-                console.log("Error creating user:", error);
-                if(error = "The specified email address is already in use."){
-                    console.log("this account has already been created");
-                    clear();
-                }
+                console.log("Login Failed!", error);
               } else {
-                console.log("Successfully created user account with uid:", userData.uid);
-                create(userData.uid,username);
+                console.log("Authenticated successfully with payload:", authData);
+                login(username,password);
               }
             });
+            //var ref = new Firebase("https://testapp31415.firebaseio.com");
         }
-        function create(userData,email){
+        function login(userData,email){
             ref.child("users").child(userData).set({
                 basic:{
                     email: email
