--- a/sign-in.html
+++ b/sign-in.html
@@ -106,7 +106,7 @@
             //accessInfo(params["username"]);
         };
         function accessInfo() {
-            console.log("access clicked!!");
+            console.log("access clicked!!!");
             var username = $("#username").val();
             var password = $("#password").val();
             console.log(username);
