--- a/profile.html
+++ b/profile.html
@@ -117,7 +117,10 @@
         </div>
 
       </div>
-
+    <script>
+        var thing = sessionStorage.getItem("userData");
+        console.log("dude bro " + thing);
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
