--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,11 @@
 
     <!-- Custom styles for this template -->
     <link href="profile.css" rel="stylesheet">
+    <style>
+        #info{
+            background-image: url(img/nature-tree-green-pine.jpg);
+        }
+    </style>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
