--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <!--<link rel="icon" href="../../favicon.ico">-->
       
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter|Libre+Baskerville' rel='stylesheet' type='text/css'>
 
     <title>Profile</title>
 
@@ -18,6 +18,7 @@
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href='https://fonts.googleapis.com/css?family=Nunito|Architects+Daughter' rel='stylesheet' type='text/css'>
     <link href="profile.css" rel="stylesheet">
     <style>
         #info{
@@ -44,12 +45,13 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Hike</h3>
+              <h1 class="masthead-brand">Hike</h1>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Search</a></li>
+                  <li><a href="#">Help</a></li>
+                  <li></li><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
                 </ul>
               </nav>
             </div>
