--- a/sign-up.html
+++ b/sign-up.html
@@ -51,12 +51,12 @@
         <h2>Hello, new user</h2>
         <form role="form" onsubmit="accessInfo()" class="form-signin">
             <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" maxlength="50" class="form-control" id="username" placeholder="username">
+                <label for="username">Email:</label>
+                <input type="text" maxlength="50" class="form-control" id="username" placeholder="username" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" maxlength="50" class="form-control" id="password" placeholder="password">
+                <input type="password" maxlength="50" class="form-control" id="password" placeholder="password" required>
             </div>
             <!--<div class="form-group">
                 <label for="grade">Grade in class:</label>
