--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,7 @@
                   <li class="active"><a href="#">Home</a></li>
                   <li><a href="#">Search</a></li>
                   <li><a href="#">Help</a></li>
-                  <li></li><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
+                  <li></li><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></li>
                 </ul>
               </nav>
             </div>
@@ -89,6 +89,7 @@
 
         <div class="container-fluid">
             <div id="info" class="row">
+                
             </div>
         </div>
             <!--<h1>Teach or be taught</h1>
@@ -116,7 +117,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <!--<p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>-->
             </div>
           </div>
 
