Added Link to dashboard from profile and redid doughnuts

--- a/profile.html
+++ b/profile.html
@@ -72,8 +72,10 @@
                     <h3>Find hikes</h3>
                 </div>
                 <div class="col-md-4">
+                    <a href="dashboard.html">
                     <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
                     <h3>See your hikes</h3>
+                    </a>
                 </div>
                 <!--<h1>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
