--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href = "bootstrap-3.3.5-dist/css/bootstrap.min.css"rel="stylesheet">
+    
+    <script src="Chart.js-master/src/Chart.Core.js"></script>
+    <script src="Chart.js-master/src/Chart.Doughnut.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
@@ -82,22 +85,22 @@
 
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
+              <div class="canvas-holder"><canvas id="chart1" width="100" height="100"></canvas></div>
+              <h4>Freinds on Hikes</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
+              <div class="canvas-holder"><canvas id="chart2" width="100" height="100"></canvas></div>
+              <h4>Hike Locations</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
+              <div class="canvas-holder"><canvas id="chart3" width="100" height="100"></canvas></div>
+              <h4>Groups Hiked With</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
+              <div class="canvas-holder"><canvas id="chart4" width="100" height="100"></canvas></div>
               <h4>Label</h4>
               <span class="text-muted">Something else</span>
             </div>
@@ -234,7 +237,48 @@
         </div>
       </div>
     </div>
+    <script>
+        
+        var doughnutData = [
+				{
+					value: 28.5,
+					label: "Trump"
+				},
+				{
+					value: 18.8,
+					label: "Carson"
+				},
+				{
+					value: 7.8,
+					label: "Bush",
+                    color: "#008A2E"
+				},
+				{
+					value: 7.3,
+					label: "Rubio",
+                    color: "#46BFBD"
+				},
+				{
+					value: 6.5,
+					label: "Cruz",
+                    color:"#F7464A"
+				}
 
+			];
+
+			window.onload = function()
+            {
+				var ctx = document.getElementById("chart1").getContext("2d");
+				window.myDoughnut = new Chart(ctx).Doughnut(doughnutData, {animationSteps : 90,responsive : true});
+                var ctx1 = document.getElementById("chart2").getContext("2d");
+				window.myDoughnut2 = new Chart(ctx1).Doughnut(doughnutData, {animationSteps : 95,responsive : true});
+                var ctx2 = document.getElementById("chart3").getContext("2d");
+				window.myDoughnut3 = new Chart(ctx2).Doughnut(doughnutData, {animationSteps : 100,responsive : true});
+                var ctx3 = document.getElementById("chart4").getContext("2d");
+				window.myDoughnut4 = new Chart(ctx3).Doughnut(doughnutData, {animationSteps : 105,responsive : true});
+			};
+        myDoughnut.resize();
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
