--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,8 @@
       
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter|Libre+Baskerville' rel='stylesheet' type='text/css'>
+      
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <title>Profile</title>
 
@@ -65,7 +67,7 @@
                 </div>
                 <div class="col-md-4">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    <h3>Add a hike</h3>
+                    <h3>Create a hike</h3>
                 </div>
                 <div class="col-md-4">
                     <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
