create hikes part 1

--- a/profile.html
+++ b/profile.html
@@ -66,8 +66,10 @@
                     <img id = profilePic padding=100px src = "img/nature-sky-sunset-sun.jpg" width="50px" height="50px"></img>
                 </div>
                 <div class="col-md-4">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    <h3>Create a hike</h3>
+                    <a href="addHike.html">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <h3>Create a hike</h3>
+                    </a>
                 </div>
                 <div class="col-md-4">
                     <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
@@ -75,8 +77,8 @@
                 </div>
                 <div class="col-md-4">
                     <a href="dashboard.html">
-                    <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-                    <h3>See your hikes</h3>
+                        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                        <h3>See your hikes</h3>
                     </a>
                 </div>
                 <!--<h1>
