Added dynamic tables

--- a/dashboard.html
+++ b/dashboard.html
@@ -108,28 +108,9 @@
             </div>
           </div>
         <button type="button" class="btn btn-primary" onClick="searchHike()">Add</button>
-          <div id="tutorTable" class="table-responsive">
-                <table class="table" id="canTutorTable">
-                    <thead>
-                        <tr>
-                            <th>Class</th>
-                            <th>Teacher</th>
-                            <th>Year Taken</th>
-                            <th>Grade/Score</th>
-                            <th>AP/SAT/ACT</th>
-                            <th>$/hour</th>
-                            <th>Comments</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
-           </div>
-            
           <h2 class="sub-header">Section title</h2>
           <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped" id="canHikeTable">
               <thead>
                 <tr>
                   <th>#</th>
@@ -137,6 +118,7 @@
                   <th>Header</th>
                   <th>Header</th>
                   <th>Header</th>
+                  <th>Header</th> 
                 </tr>
               </thead>
               <tbody>
@@ -187,7 +169,7 @@
                 var ctx3 = document.getElementById("chart4").getContext("2d");
 				window.myDoughnut4 = new Chart(ctx3).Doughnut(doughnutData, {animationSteps : 105,responsive : true});
 			};
-        myDoughnut.resize();
+        //myDoughnut.resize();
         function searchHike()
         {
             var userId = sessionStorage.getItem("userData");
@@ -207,6 +189,8 @@
             hikeRef.on("value", function(snapshot) {
               var hikeNode = (snapshot.val());
             console.log(hikeNode.zip);
+            console.log(hikeNode.type);
+            $('#canHikeTable tr:last').after('<tr><td id=leader>' + hikeNode.leader + '</td><td id=state>' + hikeNode.state + '</td><td id=zip>' + hikeNode.zip + '</td><td id=trail>' + hikeNode.trail + '</td><td id=type>' + hikeNode.type + '</td><td id= comment>' + hikeNode.comment + '</td><td></tr>');
             }, function (errorObject) {
               console.log("The read failed: " + errorObject.code);
             });
