--- a/profile.html
+++ b/profile.html
@@ -72,8 +72,10 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-                    <h3>Find hikes</h3>
+                    <a href="search.html">
+                        <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                        <h3>Find hikes</h3>
+                    </a>
                 </div>
                 <div class="col-md-4">
                     <a href="dashboard.html">
