--- a/dashboard.html
+++ b/dashboard.html
@@ -107,7 +107,7 @@
               <span class="text-muted">Something else</span>
             </div>
           </div>
-          <h2 class="sub-header">Section title</h2>
+          <h2 class="sub-header">Current Hikes</h2>
           <div class="table-responsive">
             <table class="table table-striped" id="canHikeTable">
               <thead>
