a brand new stock photo

--- a/addHike.html
+++ b/addHike.html
@@ -31,7 +31,7 @@
     
     <style>
         body {
-            background-image: url(../gollyzoom.github.io/img/sky-clouds-field-blue.jpg);
+            background-image: url(../gollyzoom.github.io/img/skyGrass.jpg);
             margin-left: 8vw;
             margin-right: 8vw;
             width: auto;
